code.tf

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

# Create a VPC
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.100.0.0/16"
  tags = {
    Name = "Demo VPC"
  }
}

# Create Web Public Subnet
resource "aws_subnet" "web-subnet-1" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = "10.100.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "Web-1a"
  }
}

resource "aws_subnet" "web-subnet-2" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = "10.100.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "Web-2b"
  }
}

# Create Database Private Subnet
# resource "aws_subnet" "database-subnet-1" {
#   vpc_id            = aws_vpc.my-vpc.id
#   cidr_block        = "10.0.21.0/24"
#   availability_zone = "us-east-1a"

#   tags = {
#     Name = "Database-1a"
#   }
# }

# resource "aws_subnet" "database-subnet-2" {
#   vpc_id            = aws_vpc.my-vpc.id
#   cidr_block        = "10.0.22.0/24"
#   availability_zone = "us-east-1b"

#   tags = {
#     Name = "Database-2b"
#   }
# }

# resource "aws_subnet" "database-subnet" {
#   vpc_id            = aws_vpc.my-vpc.id
#   cidr_block        = "10.0.3.0/24"
#   availability_zone = "us-east-1a"

#   tags = {
#     Name = "Database"
#   }
# }

# Create Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = "Demo IGW"
  }
}

# Create Web layber route table
resource "aws_route_table" "web-rt" {
  vpc_id = aws_vpc.my-vpc.id


  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "WebRT"
  }
}

# Create Web Subnet association with Web route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.web-subnet-1.id
  route_table_id = aws_route_table.web-rt.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.web-subnet-2.id
  route_table_id = aws_route_table.web-rt.id
}



#Create EC2 Instance

resource "aws_instance" "webserver1" {
  ami                    = "ami-026b57f3c383c2eec"
  instance_type          = "t2.micro"
  availability_zone      = "us-east-1a"
  vpc_security_group_ids = [aws_security_group.webserver-sg.id]
  subnet_id              = aws_subnet.web-subnet-1.id
  key_name               = "developer1"

  tags = {
    Name = "Web Server"
  }
}

resource "null_resource" "copy_execute" {

  connection {
    type        = "ssh"
    host        = aws_instance.webserver1.public_ip
    user        = "ec2-user"
    private_key = file("developer1.pem")
  }
  provisioner "file" {
    source      = "ec2.sh"
    destination = "/tmp/ec2.sh"
  }
  provisioner "remote-exec" {
    inline = [
      "sudo chmod 777 /tmp/ec2.sh",
      "sh /tmp/ec2.sh",
    ]
  }

  depends_on = [ aws_instance.webserver1 ]
}

resource "aws_instance" "webserver2" {
  ami                    = "ami-026b57f3c383c2eec"
  instance_type          = "t2.micro"
  availability_zone      = "us-east-1b"
  vpc_security_group_ids = [aws_security_group.webserver-sg.id]
  subnet_id              = aws_subnet.web-subnet-2.id
  key_name               = "developer1"

  tags = {
    Name = "Web Server"
  }
}

resource "null_resource" "copy_execute" {

  connection {
    type        = "ssh"
    host        = aws_instance.webserver2.public_ip
    user        = "ec2-user"
    private_key = file("developer1.pem")
  }
  provisioner "file" {
    source      = "ec2.sh"
    destination = "/tmp/ec2.sh"
  }
  provisioner "remote-exec" {
    inline = [
      "sudo chmod 777 /tmp/ec2.sh",
      "sh /tmp/ec2.sh",
    ]
  }

  depends_on = [ aws_instance.webserver2 ]
}


# Create Web Security Group
resource "aws_security_group" "web-sg" {
  name        = "Web-SG"
  description = "Allow HTTP inbound traffic"
  vpc_id      = aws_vpc.my-vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description     = "Allow traffic from web layer"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-SG"
  }
}

# Create Application Security Group
resource "aws_security_group" "webserver-sg" {
  name        = "Webserver-SG"
  description = "Allow inbound traffic from ALB"
  vpc_id      = aws_vpc.my-vpc.id

  ingress {
    description     = "Allow traffic from web layer"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  ingress {
    description     = "Allow traffic from web layer"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  ingress {
    description     = "Allow traffic from web layer"
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Webserver-SG"
  }
}

# Create Database Security Group
# resource "aws_security_group" "database-sg" {
#   name        = "Database-SG"
#   description = "Allow inbound traffic from application layer"
#   vpc_id      = aws_vpc.my-vpc.id

#   ingress {
#     description     = "Allow traffic from application layer"
#     from_port       = 3306
#     to_port         = 3306
#     protocol        = "tcp"
#     security_groups = [aws_security_group.webserver-sg.id]
#   }

#   egress {
#     from_port   = 32768
#     to_port     = 65535
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "Database-SG"
#   }
# }

resource "aws_lb" "external-elb" {
  name               = "External-LB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.web-sg.id]
  subnets            = [aws_subnet.web-subnet-1.id, aws_subnet.web-subnet-2.id]
}

resource "aws_lb_target_group" "external-elb" {
  name     = "ALB-TG1"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.my-vpc.id
}

resource "aws_lb_target_group_attachment" "external-elb1" {
  target_group_arn = aws_lb_target_group.external-elb.arn
  target_id        = aws_instance.webserver1.id
  port             = 80

  depends_on = [
    aws_instance.webserver1,
  ]
}

resource "aws_lb_target_group_attachment" "external-elb2" {
  target_group_arn = aws_lb_target_group.external-elb.arn
  target_id        = aws_instance.webserver2.id
  port             = 80

  depends_on = [
    aws_instance.webserver2,
  ]
}

resource "aws_lb_listener" "external-elb" {
  load_balancer_arn = aws_lb.external-elb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.external-elb.arn
  }
}

# resource "aws_db_instance" "default" {
#   allocated_storage      = 10
#   db_subnet_group_name   = aws_db_subnet_group.default.id
#   engine                 = "mysql"
#   engine_version         = "8.0.28"
#   instance_class         = "db.t2.micro"
#   multi_az               = true
#   name                   = "mydb"
#   username               = "admin"
#   password               = "admin"
#   skip_final_snapshot    = true
#   vpc_security_group_ids = [aws_security_group.database-sg.id]
# }

# resource "aws_db_subnet_group" "default" {
#   name       = "main"
#   subnet_ids = [aws_subnet.database-subnet-1.id, aws_subnet.database-subnet-2.id]

#   tags = {
#     Name = "My DB subnet group"
#   }
# }

output "lb_dns_name" {
  description = "The DNS name of the load balancer"
  value       = aws_lb.external-elb.dns_name
}
